css/style.css
@font-face {
    font-family: Montserrat;
    font-weight: 400;
    src: url("/fonts/Montserrat-Regular.woff2"),
        url("/fonts/Montserrat-Regular.woff");
}

@font-face {
    font-family: Montserrat;
    font-weight: 600;
    src: url("/fonts/Montserrat-SemiBold.woff2"),
        url("/fonts/Montserrat-SemiBold.woff");
}

@font-face {
    font-family: Montserrat;
    font-weight: 700;
    src: url("/fonts/Montserrat-Bold.woff2"),
        url("/fonts/Montserrat-Bold.woff");
}

@font-face {
    font-family: Montserrat;
    font-weight: 800;
    src: url("/fonts/Montserrat-ExtraBold.woff2"),
        url("/fonts/Montserrat-ExtraBold.woff");
}

/* common classes */
* {
    box-sizing: border-box;
}

body {
    background-color: #FFF;
}

.container {
    margin-left: auto;
    margin-right: auto;

    width: 1770px;
}

.section-heading {}

.button {
    display: inline-block;
    background-color: #FF9900;
    color: #FFF;

    font-family: Montserrat;
    font-size: 16px;
    font-weight: 700;
    line-height: 1;

    text-decoration: none;
}

.button:hover,
.button:focus {
    background-color: rgba(255, 153, 00, .7);
    outline: none;
}

.button:active {
    background-color: #E1670E;
}

/* header */
.header {
    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
    position: absolute;
    left: 0px;
    right: 0px;
}

.header__container {
    padding: 14px 0px 14px 75px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.header__spacer {
    height: 100px;
}

.top-nav__list {
    display: flex;
    list-style: none;
    align-items: center;
}

.top-nav__item:not(:last-child) {
    margin-right: 85px;
}

.top-nav__link {
    padding: 5px;

    font-family: Montserrat;
    font-size: 18px;
    font-weight: 600;
    line-height: 1;
    text-decoration: none;
    color: #333333;

    border: 2px solid transparent;
}

.top-nav__link:hover {
    border-bottom: 2px solid #FF9900;
}

.top-nav__link:focus {
    border: 2px solid #FF9900;
    outline: none;
}

.top-nav__link:active {
    color: #E1670E;
    border: 2px solid #E1670E;
}

.top-nav__search-button {
    padding: 2px;
    width: 28px;
    height: 28px;

    cursor: pointer;
    border: 2px solid transparent;
    background-color: transparent;
    text-align: center;
}

.top-nav__search-icon {
    display: inline;
    vertical-align: middle;
    transform: translate(-2px, -2px);

    border: 2px solid transparent;
    width: 24px;
    height: 24px;
    margin-right: 75px;
}

.top-nav__search-button:hover path {
    stroke: #FF9900;
}

.top-nav__search-button:hover rect {
    fill: #FF9900;
}

.top-nav__search-button:focus {
    border: 2px solid #FF9900;
    outline: 0;
}

.top-nav__search-button:active {
    border: 2px solid transparent;
}

.top-nav__search-button:active path {
    stroke: #FF9900;
}

.top-nav__search-button:active rect {
    fill: #FF9900;
}

/* hero */
.hero__container {
    padding: 100px 0px 100px 80px;

    background-image: url("/img/hero/bg1.jpg");
    background-repeat: no-repeat;
    background-size: cover;
}

.hero__heading {
    max-width: 55%;
    margin: 0px 0px 20px 0px;

    color: #FFF;
    font-family: Montserrat;
    font-size: 70px;
    font-weight: 800;
    line-height: 85px;
}

.hero__button {
    padding: 25px 37px;
}

.hero__content {
    max-width: 50%;
    margin: 0px 0px 90px 0px;

    color: #FFF;
    font-family: Montserrat;
    font-size: 24px;
    font-weight: 700;
    line-height: 29px;
}

